# mlx-c-fork

./: CMakeLists.txt
include/: gguf.h  quantize.h
include/mlx_c/: mlx_c.h  status.h
mlx/c/: fft.cpp  memory.cpp  memory.h
mlx_c/: array.cpp  status.cpp
src/: gguf.c  llama.c  quantize.c
tests/: CMakeLists.txt  test_array.c  test_llama.c  test_utils.h
